added contact controller
